# Home-Bakers-International

./: .gitignore  README.md
Frontend/: App.razor  Program.cs  _Imports.razor
Frontend/Layout/: MainLayout.razor
Frontend/Models/: Recipe.cs
Frontend/Pages/: Home.razor  RecipeDetails.razor  RecipeForm.razor  Recipes.razor
Frontend/Properties/: launchSettings.json
Frontend/Services/: IRecipeService.cs  RecipeService.cs
Frontend/wwwroot/: index.html
Frontend/wwwroot/css/: app.css
app/: CMakeLists.txt  CMakePresets.json  Recipes.cpp  Recipes.h  Service.cpp  Service.h  app.cpp  config.json  vcpkg.json
